# bytebeat

./: AGENTS.md  Cargo.toml  README.md  build.rs  enforce_c_compat.sh  library.csv
codegen_templates/: generate_references.c  library_data.rs
src/: app.rs  audio.rs  event.rs  library_data.rs  main.rs  parser.rs  pipewire.rs  tui.rs
src/app/: input.rs  library.rs  scope.rs  ui.rs  volume.rs
src/audio/: pipewire.rs  wasapi.rs
src/parser/: generate_references.c  lex.rs  mod.rs  parse.rs
