[package]
name = "bytebeat"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
libspa-sys = "0.9.2"
pipewire = "0.9.2"
ratatui = "0.29.0"
thiserror = "2.0.17"
tracing = "0.1.43"

tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tui-logger = { version = "0.17.4", features = ["crossterm", "tracing-support"] }
